finished a draft for LL to make word

--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -196,7 +196,7 @@
 
 \title{Oceanography Graduate Handbook}
 \author{}
-\date{Takes into account Boudreau's comments dated 2017-03-21, plus GAC/GOC comments during meeting on 2017-04-07}
+\date{2017-04-13}
 
 
 \begin{document}
@@ -212,15 +212,16 @@ to complete a degree program in Oceanography.  In the event of a real or
 perceived conflict in such stipulations, Graduate Studies (\FGS) requirements
 and rules shall prevail.
 
+
 \newpage
 
 \renewcommand{\baselinestretch}{0.5}\normalsize
 
 \pagenumbering{roman}
-{\footnotesize
+
 \setcounter{tocdepth}{2}
 \tableofcontents
-}
+
 \thispagestyle{empty}
 \renewcommand{\baselinestretch}{1.0}\normalsize
 
@@ -247,9 +248,10 @@ document.
 
     \item \NSERC stands for Natural Science and Engineering Research Council.
 
-    \item ``Regular professor'' \fixme{fill in some text, with a link to FGS}
-
-    \item ``Adjunct (x)'' \fixme{fill in some text, with a link to FGS}
+    \item ``Regular member of FGS,'' ``Adjunct (Faculty of Graduate Studies)''
+        and ``Adjunct (Scholar)'' refer to various categories of membership in
+        FGS, as defined on the FGS
+        website\furl{https://www.dal.ca/faculty/gradstudies/faculty/membership.html}.
 
     \item ``External,'' referring to a person, is employed in this document in
         three different contexts:
@@ -307,9 +309,6 @@ of scholarships and stipends.
 %    \item Thesis Code
 %    \item Courses (if applicable)
 %\end{enumerate}
-
-%\fixme{DK: somewhere hereabouts, insert the diagram I made of the timeline for
-%MSc and PhD}
 
 \p Students who fail to register within the approved deadlines will be
 considered to have \di{lapsed registration}. Such students will not be
@@ -577,14 +576,6 @@ are advised to keep this up to date.
 their graduate program, 5~years for MSc and 6~years for PhD~\cav{7.1}{Maximum Time for Degree Completion and Extensions}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.  Extensions may be
 granted by FGS on the recommendation of the Department.
 
-%, along with a
-%satisfactory Progress
-%Report\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10850}.\fixme{DK:
-%I don't think we should state this ``along with.'' It makes it look as though
-%submitting that document is sufficient. I would prefer to be vague on this; the
-%GOC should probably take each case individually. This is not so common that we
-%would be asking much of the GOC to take on this task.}\fixme{the links here are messed up}
-
 \section{Supervision}
 
 Rules and guidelines for supervisors and {\supcom}s are provided in Section~9
@@ -790,10 +781,10 @@ requirements:
 Calendar\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=70&chapterid=3716&topicgroupid=15375} lists
 course requirements as
 \begin{quotation}
-``Students must complete \course{5001} and an additional 6 credit hours from
+\noindent\emph{``Students must complete \course{5001} and an additional 6 credit hours from
 core courses (5110.03-5140.03); (unless taken as an undergraduate at 4000-level
 (4110.03-4140.03) with minimum grade of A or 5000-level as advanced placement).
-Additional courses may be required\dots
+Additional courses may be required\dots}
 \end{quotation}
 The requirements for additional courses (if any) are set by the \supervisor, perhaps in
 consultation with other members of the \supcom.
@@ -1016,11 +1007,10 @@ for suitability and final approval. Details of the timeline are as follows.
             \item Electronically submit the final PDF version of the thesis via
                 DalSpace\furl{http://dalspace.library.dal.ca/}.
 
-            \item Submit original completed forms to \FGS (National Library of
-                Canada Form, Title Page of Thesis, Signature page with original
-                signatures, Copyright Page, Ethics Pages (if applicable),
-                Student Contribution to Manuscripts (if applicable).\fixme{Ask
-                LL: do these things all still exist?}
+            \item Submit various completed forms to \FGS. These may include
+                a National Library of Canada Form, a Signature page with
+                original signatures, \etc; since these may change over time,
+                students should consult the FGS website for details.
 
             \item Submit a Thesis Binding Submission Form and payment to the
                 \GS.
@@ -1117,18 +1107,20 @@ to indicate the change of program.
 Calendar\furl{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=70&chapterid=3716&topicgroupid=15376}
 lists course requirements as
 \begin{quotation}
+    \noindent\emph{
 Students must complete at least 12 credit hours at 5000-level or higher of OCEA
 courses (OCEA 5001 does not count towards this requirement), 9 of which from
 core courses (5110.03-5140.03) (with MSc from Dal Oceanography: core courses
 taken at MSc can be waived for the PhD requirement; with MSc from other
 departments or institutions: core course equivalencies will be assessed on case
-by case). Additional courses may be required \dots
+by case). Additional courses may be required \dots}
 \end{quotation}
 The requirements for additional courses (if any) are set by the
 \supervisor, perhaps in consultation with other members of the \supcom.
 
-\fixme{ask LL: what about the rule on adv-placement or waiving? We
-should provide a URL and summary statement}
+\fixme{DK to LL: can you supply text (\ie references to FGS or Registrar rules)
+about the rules regarding advanced placement or the waiving of course
+requirements?}
 
 
 
@@ -1273,7 +1265,7 @@ should provide a URL and summary statement}
 tailored to the PhD candidate's general research area. This examination is not
 a mini-proposal defence or a pre-proposal exercise. It is designed to test a
 student's ability to read, understand, and relay to an examining body the
-content, meaning and relevance of chosen papers in the Oceanographic
+content, meaning and relevance of chosen papers in the oceanographic
 literature.
 
 \p The \qe is a Department process, not a Supervisory Committee process.  The
@@ -1282,11 +1274,9 @@ student's subdiscipline(s).  (If the student is co-supervised by an Adjunct
 Professor or a cross-listed Professor, then that individual also takes part in
 the \qe.)
 
-\p The \qe should be completed between months 9 and 12 of the PhD program.
-Students who have transferred from the MSc program should take the QE within 12
-months of their transfer.\fixme{I'm lost in my notes on the suggested new rules
-on timing. We may have decided ``between 8 and 20 months of finishing core
-classes'' LORI -- is this in your notes?}
+\p The \qe should be completed \mutable{4 to 12} months after the completion of
+the core classes.  Students who have transferred from the MSc program should
+take the QE within \mutable{12} months of their transfer.
 
 \p The Examining Committee includes a Chair (normally the \GC or a designate
 who is not associated with the student), at least 3 members of the
@@ -1472,6 +1462,9 @@ the Oceanography faculty outside the sub-discipline(s).
                 student and the members of the Examining committee. The
                 original document is to be stored in the student's file.
 
+            \item The \GS updates the student's electronic record (on
+                \dalonline) to reflect the outcome of the \qe.
+
         \end{itemize}
 
 \end{itemize}
@@ -1482,26 +1475,29 @@ the Oceanography faculty outside the sub-discipline(s).
 
 \cp
 
-\p PhD students are expected to complete the thesis proposal and examination of
-the proposal within 20 months of enrolling in the graduate program.
+%\p PhD students are expected to complete the thesis proposal and examination of
+%the proposal within 20 months of enrolling in the graduate program.
 
-\p In order to proceed with the proposal, the student will have completed the
-required first-year courses, have a named \supervisor and \supcom, completed a
-\QE, and received approval from the \supervisor.\fixme{I added the QE part, on
-advice of BB}
+\p PhD students are expected to complete the thesis proposal and examination of
+the proposal within \mutable{4 and 12} months of completing the \qe.
+
+%\p In order to proceed with the proposal, the student will have completed the
+%required first-year courses, have a named \supervisor and \supcom, completed a
+%\QE, and received approval from the \supervisor.\fixme{I added the QE part, on
+%advice of BB}
 
 \p The requirement consists of a written thesis proposal and a public oral
 defence.  The written proposal will include an overview of the research topic
 and relevant background material, and a plan for carrying out the PhD research.
 The oral portion is a defence of the proposal, including other relevant areas
 of Oceanography. The topics covered in the defence may relate not just to the
-planned research, but also to wider Oceanographic issues, as deemed appropriate
+planned research, but also to wider oceanographic issues, as deemed appropriate
 by the defence committee.
 
-\p The defence is open to attendance by all interested persons, except for the
-in-camera portion in which the decision is made by the examining committee.
-Notices of the thesis proposal defence, including an abstract, will be
-distributed to all members of the Oceanography Department and will be posted.
+%\p The defence is open to attendance by all interested persons, except for the
+%in-camera portion in which the decision is made by the examining committee.
+%Notices of the thesis proposal defence, including an abstract, will be
+%distributed to all members of the Oceanography Department and will be posted.
 
 
 %C4.1	EXAMINING COMMITTEE
@@ -1512,63 +1508,63 @@ distributed to all members of the Oceanography Department and will be posted.
 \p The examining committee is selected by the \supcom, and consists of members
 from that committee, external members, and a departmental representative. The
 \GS will arrange for the Departmental Representative (normally the \GC or a
-designate).
-
-\p The Chair of the PhD proposal defence is independent of the examining
-committee. The Departmental Representative or a designate normally performs
-this duty.
+designate).  The Chair of the PhD proposal defence is independent of the
+examining committee.
 
 \p Students must make the proposal available in the Department of Oceanography
-office at least 10 working days prior to the oral defence\vote{DK to GOC: I
-think we should have a form for this. OK? DK=yes, BB=yes}  The proposal
+office at least 10 working days prior to the oral defence.  The proposal
 typically receives input from the \supervisor or others prior to its
 submission. Approval from the \supcom is required to proceed with the oral
 defence.
 
-%C4.2	PROPOSAL TIMELINE
-\subsubsection{Proposal timeline}
+\p Because the proposal is a formal requirement of the Department, it carries
+the same weight as courses, thesis defence, etc. Failure to complete the
+proposal within the required time frame reflects poorly on the student and can
+endanger standing in the program.
 
-
-\cp
-
-\p It is the student's responsibility to initiate the proposal process and
-develop the proposal in coordination with the \supervisor and \supcom. Two
-terms are more than adequate to complete this requirement. The scheduling of
-the proposal defence should be planned well in advance so that it can be
-carried out prior to the 20th month of the program.
-
-\p There is no restriction on early completion of the proposal and oral exam (\eg
-in the summer between first and second years or fall term of second year).
-
-\p Because the proposal is a formal requirement of the Department, it carries the
-same weight as courses, thesis defence, etc. Failure to complete the proposal
-within the required time frame reflects poorly on the student and can endanger
-standing in the program.
-
+%%C4.2	PROPOSAL TIMELINE
+%\subsubsection{Proposal timeline}
+%
+%
+%\cp
+%
+%\p It is the student's responsibility to initiate the proposal process and
+%develop the proposal in coordination with the \supervisor and \supcom. Two
+%terms are more than adequate to complete this requirement. The scheduling of
+%the proposal defence should be planned well in advance so that it can be
+%carried out prior to the 20th month of the program.
+%
+%\p There is no restriction on early completion of the proposal and oral exam (\eg
+%in the summer between first and second years or fall term of second year).
+%
 
 %C4.3	PROPOSAL OUTCOME
 \subsubsection{Proposal outcome}
 
 \cp
 
-\p Based on both the written proposal and oral defence, the \supervisor will
-notify the \GS, \GC, student, and examining committee in writing of one of the
-four possible outcomes:
+\p Based on both the written proposal and oral defence, the chair of the
+defence will write a report to the \GC stating the outcome, and provide this to
+the \GS for storage in the student's file. The \GS will also scan the report
+and distribute it electronically to the student, the \supervisor, and the
+examining committee.
+
+\p There are four possible outcomes of a proposal defence:
 
 \begin{itemize}
-\item Continuation in the PhD program
-\item Permission to re-defend
-\item Transfer to the MSc program
-\item Withdrawal from the program
+\item Continuation in the PhD program, with or without revisions to the proposal.
+\item Permission to re-defend.
+\item Transfer to the MSc program.
+\item Withdrawal from the program.
 \end{itemize}
 
-\p Revisions, and/or a re-defence must be completed prior to the end of the exam
-period in the winter term. Following the defence, a copy of the approved
-proposal must be placed on file in the Oceanography office.
+%\p Revisions, and/or a re-defence must be completed prior to the end of the exam
+%period in the winter term. Following the defence, a copy of the approved
+%proposal must be placed on file in the Oceanography office.
 
 
 %C5	PhD THESIS
-\subsection{\label{sec:phd_thesis}PhD thesis}
+\subsection{\label{sec:phd_thesis}PhD thesis and defence}
 
 \cp
 
@@ -1761,47 +1757,52 @@ topic, after successful completion of the thesis examination.
 
 \cp
 
-\p Dalhousie Graduate Fellowships will normally be provided for two years for an
-MSc student and four years for a PhD student.
+\p The student and \supervisor are expected to reach an agreement on funding,
+and to inform the departmental staff of the arrangement and any changes to it.
+\p Students should investigate additional sources of funding, \eg \NSERC
+scholarships, Nova Scotia Graduate Scholarships, Killam Scholarships, \etc.
+They should also learn about the availability of Teaching Assistantships, and
+university support for student
+travel\furl{http://www.dal.ca/faculty/gradstudies/funding/grants.html}.
 
-\p Scholarship support is provided directly to some students by the Natural
-Sciences and Engineering Research Council (\di{NSERC}), the \di{Killam
-Foundation} through Dalhousie, by companies, and by other agencies, both
-national and international. Students are encouraged to apply for external
-support whenever possible.
 
-\p Full-time students without such special scholarship support are usually
-awarded Dalhousie Graduate Fellowships from funds that come mainly from
-individual faculty members' research grants, with a \sout{minor}
-possible\vote{BB suggested this change. OK? DK=yes, BB=yes} contribution from
-\FGS.
-
-\p Students may also receive extra support by taking on a teaching
-assistantship, or by demonstrating in undergraduate laboratories.
-
-\p Students should discuss any additional employment with their \supcom to
-ensure that the time commitments outside the Department are not excessive, and
-do not interfere with program expectations. (The university also imposes limits
-on external commitments.)
+%
+%\p Dalhousie Graduate Fellowships will normally be provided for two years for an
+%MSc student and four years for a PhD student.
+%
+%\p Scholarship support is provided directly to some students by the Natural
+%Sciences and Engineering Research Council (\di{NSERC}), the \di{Killam
+%Foundation} through Dalhousie, by companies, and by other agencies, both
+%national and international. Students are encouraged to apply for external
+%support whenever possible.
+%
+%\p Full-time students without such special scholarship support are usually
+%awarded Dalhousie Graduate Fellowships from funds that come mainly from
+%individual faculty members' research grants, with a \sout{minor}
+%possible\vote{BB suggested this change. OK? DK=yes, BB=yes} contribution from
+%\FGS.
+%
+%\p Students may also receive extra support by taking on a teaching
+%assistantship, or by demonstrating in undergraduate laboratories.
+%
+%\p Students should discuss any additional employment with their \supcom to
+%ensure that the time commitments outside the Department are not excessive, and
+%do not interfere with program expectations. (The university also imposes limits
+%on external commitments.)
 
 
 %D1	FGS CONFERENCE TRAVEL GRANT
 %\subsection{FGS conference travel grant}
 
 
-\p
-Graduate students are eligible to apply for one \di{travel grant} per degree at
-Dalhousie (Master's or Doctoral) through the \FGS\footnote{FGS Conference
-Travel Grant Application Form and Guidelines
-\href{http://www.dal.ca/faculty/gradstudies/funding/grants.html}.}.
-Applications must be submitted through the \GS at least one month prior to the
-date of travel.  Students must be registered in a graduate program at the time
-of application and at the time of the conference. In order to be eligible,
-students must present a poster of paper based on the results of their graduate
-thesis research at a national or international scholarly meeting or conference.
-\sout{Departmental approval must be given to these applications.}\vote{BB
-suggested deleting this last sentence, arguing that it could be challenged as a
-violation of the right to work. OK to delete? DK=yes, BB=yes}.
+%Applications must be submitted through the \GS at least one month prior to the
+%date of travel.  Students must be registered in a graduate program at the time
+%of application and at the time of the conference. In order to be eligible,
+%students must present a poster of paper based on the results of their graduate
+%thesis research at a national or international scholarly meeting or conference.
+%\sout{Departmental approval must be given to these applications.}\vote{BB
+%suggested deleting this last sentence, arguing that it could be challenged as a
+%violation of the right to work. OK to delete? DK=yes, BB=yes}.
 
 
 %E.	INTELLECTUAL  PROPERTY
@@ -1811,11 +1812,9 @@ violation of the right to work. OK to delete? DK=yes, BB=yes}.
 
 %\p The \FGS lays out~\cav{6}{blah}{{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849}
 
-\p The University specifies
-guidelines~\cav{6}{Intellectual Property and Conflict of Interest}{http://academiccalendar.dal.ca/Catalog/ViewCatalog.aspx?pageid=viewcatalog&catalogid=58&chapterid=2678&topicgroupid=10849}
-on \di{intellectual property}, \di{conflict of interest}, \di{intellectual
-honesty}, \di{plagiarism}, \di{scholarly integrity}, \etc, and students are
-expected to be familiar with and follow these policies.
+\p Students should consult Section~6 of the \fgsregs for university rules on
+intellectual property, conflict of interest, intellectual honesty, plagiarism,
+scholarly integrity, \etc
 
 % \p \fixme{DK to LL: I think this is handled by FGS rules. Can you find a URL, if so?}
 % The Faculty of Graduate Studies is developing
@@ -2008,13 +2007,12 @@ specify.
 
 \p Decisions on appeals are made by an Ad Hoc Appeal Panel.
 
-\p The Panel does not have fixed membership.  Instead, it will consist of
-\sout{three} two \fixme{change from BB} faculty members, chosen on a fixed
-rotating basis from all the faculty in the Department.  The professor(s)
-responsible for the process being appealed will be excluded.  For graduate
-students, the student's \supervisor or co-supervisors, or for undergraduates,
-the student's honors supervisor (if applicable) will also be excluded from the
-list.
+\p The Panel does not have fixed membership.  Instead, it will consist of two
+faculty members, chosen on a fixed rotating basis from all the faculty in the
+Department.  The professor(s) responsible for the process being appealed will
+be excluded.  For graduate students, the student's \supervisor or
+co-supervisors, or for undergraduates, the student's honors supervisor (if
+applicable) will also be excluded from the list.
 
 \p An appropriate graduate student (for undergraduate appeals) or
 Post-doctoral fellow (for graduate appeals) will constitute the fourth and
@@ -2024,29 +2022,23 @@ undergraduates, the student will be chosen from the graduate students, without
 a conflict of interest.  For graduate students, the Post-doctoral member will
 be chosen from the Post-doctoral Fellows, without conflict of interest.  
 
-\p \sout{The Panel will examine the appeal and determine if a \emph{prima
-facie} case exists for the appeal.  (\emph{Prima facie} in this context means
-the appeal document contains sufficient evidence to support the stated claim.)
-If such a case exists, then the} A panel will convene a formal Appeal Hearing
-at the first opportunity when all involved, i.e., appellant, the faculty member
-who owns the process, and the Panel members can meet to hear verbal arguments
-on the appeal, but preferably within three weeks of constitution of the Panel.
-\sout{If there is no \emph{prima facie} case, the Panel will inform the Chair
-and the appeal will be dismissed at the Departmental level.} \fixme{Changes in
-this paragraph are from BB}
+\p A panel will convene a formal Appeal Hearing at the first opportunity when
+all involved, i.e., appellant, the faculty member who owns the process, and the
+Panel members can meet to hear verbal arguments on the appeal, but preferably
+within three weeks of constitution of the Panel.
 
-\p If a Hearing is convened, The \fixme{DK to BB: why is it "The" here?} Panel
-will chose a Chair who will control and direct all communication.
+\p If a Hearing is convened, the Panel will chose a Chair who will control and
+direct all communication.
 
 \p The Chair of the Panel will make the faculty owner of the process
 aware of the appeal and provide, in a timely manner, a copy of the appeal
 document to the process-owner (faculty member).  
 
 \p Before the Hearing, the process owner will provide the Panel with a
-written rebuttal to the appeal within \sout{5} 10 working days of the appeal
-being received.  (Exceptions will be made to accommodate persons being at sea
-or subject to other serious limitations in availability.)  The Panel will
-forward that rebuttal to the appellant. \fixme{the change is from BB}
+written rebuttal to the appeal within 10 working days of the appeal being
+received.  (Exceptions will be made to accommodate persons being at sea or
+subject to other serious limitations in availability.)  The Panel will forward
+that rebuttal to the appellant.
 
 
 \subsection{The Appeal Hearing}
@@ -2115,7 +2107,7 @@ irregularities or unfairness in the application thereof is alleged.  This means
 that only procedural issues, and not the merits of the regulations, are subject
 to appeal.
 
-\p The Ad Hoc Appeal Panel may not render decisions counter to
+\looseness=-1 \p The Ad Hoc Appeal Panel may not render decisions counter to
 Departmental, Faculty or University regulations, nor can it make decisions that
 go beyond strictly academic matters, \eg, financial or administrative.  If the
 requested resolution contains such points, these must be ignored and dismissed.   
@@ -2127,8 +2119,8 @@ for resolution.
 \p Students have the option to appeal a decision of the departmental appeal
 process to the Senate; see the Senate regulations for details.
 
-\addcontentsline{toc}{section}{Index}
-\printindex
+%\addcontentsline{toc}{section}{Index}
+%\printindex
 
 % \newpage
 % \textbf{\large DK notes from GOC meeting on 2016-05-27} \label{mn:20160527}
