--- a/oce_handbook.tex
+++ b/oce_handbook.tex
@@ -2015,7 +2015,7 @@ co-supervisors, or for undergraduates, the student's honors supervisor (if
 applicable) will also be excluded from the list.
 
 \p An appropriate graduate student (for undergraduate appeals) or
-Post-doctoral fellow (for graduate appeals) will constitute the fourth and
+Post-doctoral fellow (for graduate appeals) will constitute the 
 final member of the Panel.  Any student on the Panel will not have a personal
 or academic conflict of interest with respect to the appellant.  For
 undergraduates, the student will be chosen from the graduate students, without
